fix: toc width on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,8 +64,10 @@ button,
 }
 
 /* Table of Contents */
-#TableOfContents {
-  max-width: 25vw;
+@media (min-width: 1024px) {
+  #TableOfContents {
+    max-width: 25vw;
+  }
 }
 
 #TOCView {
